--- a/index.html
+++ b/index.html
@@ -145,6 +145,26 @@
           </div>
         </div>
       </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <!-- <h2 class="heading-secondary" is an inline block element now; so if set the parent to text-align-center, 
+          then that inline block element inside it is treated as text and will therefore be centered. -->
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card"><div class="card__side">Text</div></div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">Card text</div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">Card text</div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
