--- a/index.html
+++ b/index.html
@@ -258,6 +258,33 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <!-- <h2 class="heading-secondary" is an inline block element now; so if set the parent to text-align-center, 
+        then that inline block element inside it is treated as text and will therefore be centered. -->
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                et cupiditate, doloremque numquam animi est eaque voluptatem
+                nisi corrupti provident voluptatibu Ullamet cupiditateet cupiditate, doloremque numquam animi est eaque voluptatem
+                nisi corrupti provident voluptatibu Ullamet cupiditate
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
