Building the Stories Section - Part 2

--- a/index.html
+++ b/index.html
@@ -253,8 +253,6 @@
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <!-- <h2 class="heading-secondary" is an inline block element now; so if set the parent to text-align-center, 
-          then that inline block element inside it is treated as text and will therefore be centered. -->
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
@@ -269,7 +267,12 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -278,11 +281,40 @@
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
                 et cupiditate, doloremque numquam animi est eaque voluptatem
-                nisi corrupti provident voluptatibu Ullamet cupiditateet cupiditate, doloremque numquam animi est eaque voluptatem
-                nisi corrupti provident voluptatibu Ullamet cupiditate
+                nisi corrupti provident voluptatibu Ullamet cupiditateet
+                cupiditate, doloremque numquam animi est eaque voluptatem nisi
+                corrupti provident voluptatibu Ullamet cupiditate
               </p>
             </div>
           </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                et cupiditate, doloremque numquam animi est eaque voluptatem
+                nisi corrupti provident voluptatibu Ullamet cupiditateet
+                cupiditate, doloremque numquam animi est eaque voluptatem nisi
+                corrupti provident voluptatibu Ullamet cupiditate
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
