Building the Stories Section - Part 3 (adding a background video)

--- a/index.html
+++ b/index.html
@@ -258,6 +258,13 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" > <!--videos from coverr.co-->
+            <source src="img/video.webm" type="video/webm" >
+            Your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <!-- <h2 class="heading-secondary" is an inline block element now; so if set the parent to text-align-center, 
         then that inline block element inside it is treated as text and will therefore be centered. -->
