--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
-            <source src="img/video.mp4" type="video/mp4" > <!--videos from coverr.co-->
-            <source src="img/video.webm" type="video/webm" >
+            <source src="img/video.mp4" type="video/mp4" />
+            <!--videos from coverr.co-->
+            <source src="img/video.webm" type="video/webm" />
             Your browser is not supported!
           </video>
         </div>
@@ -322,6 +323,43 @@
 
         <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <!-- <h2 class="heading-secondary" is an inline block element now; so if set the parent to text-align-center, 
+                    then that inline block element inside it is treated as text and will therefore be centered. -->
+                  <h2 class="heading-secondary">Start booking now</h2>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full name"
+                    id="name"
+                    required
+                  />
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                    required
+                  />
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
