--- a/index.html
+++ b/index.html
@@ -467,6 +467,33 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus
+            arcu bibendum at varius vel pharetra vel. Faucibus interdum posuere
+            lorem ipsum dolor sit amet consectetur. Semper feugiat nibh sed
+            pulvinar proin gravida hendrerit lectus. Sodales ut eu sem integer
+            vitae justo. Eget nunc scelerisque viverra mauris in aliquam sem
+            fringilla ut. Egestas pretium aenean pharetra magna.
+          </p>
+
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
