--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-    <title>Serene Himachal | Exciting tours for adventurous people</title>
+    <title> Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
     <div class="navigation">
@@ -30,7 +30,7 @@
         <ul class="navigation__list">
           <li class="navigation__item">
             <a href="#" class="navigation__link"
-              ><span>01</span>About Natours</a
+              ><span>01</span>About Serene Himachal</a
             >
           </li>
           <li class="navigation__item">
